[tool.poetry]
package-mode = false
name = "seeonlinetelegrambot"
version = "0.1.0"
description = ""
authors = ["Fe4ester <xdxdxd4305@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.18.0"
aiohttp = "^3.11.13"
redis = "^5.2.1"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.0"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
